--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -8,7 +8,7 @@
     "default_popup": "index.html"
   },
   "host_permissions": [
-    "*://*.doordash.com/"
+    "<all_urls>"
   ],
   "permissions": [
     "cookies",
